# pcl_detection2

./: .gitignore  CMakeLists.txt  README.md  package.xml  uav-fix.txt
config/: pcl_detection2.yaml
include/adapters/: livox_converter.hpp  pc_tf_matrix.hpp
include/core/: pillar_detect.hpp  project.hpp  register.hpp  roi.hpp  voxel.hpp
include/core/plane/: plane.hpp  plane_extract.hpp  plane_project.hpp  point_back_project.hpp
include/core/template_match/: square_ring_match.h  template_loader.h
include/pipeline/: extract_square_ring.hpp
launch/: pcl_detection.launch  pcl_detection2.launch
msg/: SquareRing.msg
scripts/: show_mats.py  test_pillar_match.py
shell/: pcl_detection.sh
src/: main.cpp
