<?xml version="1.0"?>
<package format="2">
  <name>pcl_detection2</name>
  <version>2.0.0</version>
  <description>The pcl_detection2 package</description>

  <maintainer email="2089378601@qq.com">RgerColdline</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>eigen</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>livox_ros_driver2</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
